--- a/style.css
+++ b/style.css
@@ -41,3 +41,9 @@ background-color: yellow;
     height: 50%;
     background-color: green;
 }
+
+.article{
+    background-color: red;
+    width: 100%;
+    height: 10vh;
+}
